--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-node_modules
+node_modules/
 .DS_Store
+npm-debug.log
+selenium-debug.log
+test/unit/coverage
+test/e2e/reports
+.idea/
+example/build.js
