--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-published",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Determine when modules in your project were updated",
   "main": "lib/index.js",
   "repository": {
@@ -19,11 +19,23 @@
   "homepage": "https://github.com/bhoriuchi/npm-published",
   "dependencies": {
     "node-getopt": "^0.2.3",
-    "lodash": "^4.14.0",
+    "lodash": "^4.15.0",
     "npm": "^3.10.0",
     "bluebird": "^3.4.0",
-    "json-diff": "^0.3.1",
     "walk-promise": "^0.2.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "babel-core": "^6.0.0",
+    "babel-preset-es2015": "6.13.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-runtime": "^6.9.0",
+    "babel-register": "^6.11.0",
+    "mocha": "^3.0.0",
+    "rollup": "^0.34.0",
+    "rollup-plugin-babel": "^2.6.0",
+    "babel-preset-es2015-rollup": "^1.1.0"
   },
   "bugs": {
     "url": "https://github.com/bhoriuchi/npm-published/issues"
@@ -31,8 +43,14 @@
   "bin": {
     "npm-published": "npm-published.js"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:copybrc": "cp build/.build.babelrc src/.babelrc",
+    "build:rmbrc": "rm -f src/.babelrc",
+    "buildexample": "npm run build && rollup example/example.js --output example/build.js --format cjs && node example/build.js --harmony",
+    "example": "node example/index.js --harmony",
+    "build:main": "npm run build:copybrc && rollup -c build/rollup.main.config.js && npm run build:rmbrc",
+    "build:cli": "npm run build:copybrc && rollup -c build/rollup.cli.config.js && npm run build:rmbrc",
+    "build": "npm run build:main && npm run build:cli",
+    "test": "npm run build && mocha test/index.js"
   }
 }
